--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,195 @@
-.App {
-  text-align: center;
+:root {
+  --color-buena: #95BF39;
+  --color-acept: #F2E313;
+  --color-mala: #F2811D;
+  --color-muymala: #F22233;
+  --color-extmala: #73022C;
+  --color-darkgreen: #387347;
+  --color-black: #1B1B1B;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.morado {
+  color:var(--color-extmala);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  background-color: var(--color-darkgreen);
+  box-shadow: 5px 0 10px grey;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+nav a img {
+  border-radius: 50%;
+}
+
+.h1-nav {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.white {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.menu-link {
+  border-radius: 5px !important;
+  padding: 5px 15px !important;
+  color:lightgray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-active {
+  text-decoration: none;  
+  color: white;
 }
+
+.menu-link:hover {
+  color: white;
+  background-color: #85BF4B;
+  text-decoration: none;
+}
+
+
+/******* RECOMENDACIONES TABS ********/
+.navbar-toggler, .navbar-toggler:focus {
+  border:none;
+  box-shadow: none;
+}
+
+.nav-tabs {
+  background-color: transparent;
+  box-shadow: none;
+  border-bottom: none;
+}
+
+.navlink .active {
+  border: none;
+}
+
+.nav-item, .nav-link {
+  color: black;
+  border-radius: 5px 5px 0px 0px;
+  font-weight: 500;
+}
+
+
+.nav-buena {
+  border-bottom: solid 5px var(--color-buena);
+}
+.nav-buena:hover, .nav-buena.active {
+  background-color: var(--color-buena);
+  color: white;
+}
+
+.nav-acept {
+  border-bottom: solid 5px var(--color-acept);
+}
+.nav-acept:hover, .nav-acept.active {
+  background-color: var(--color-acept);
+  color: white;
+}
+
+.nav-mala {
+  border-bottom: solid 5px var(--color-mala);
+}
+.nav-mala:hover, .nav-mala.active{
+  background-color: var(--color-mala);
+  color: white;
+}
+
+.nav-muy {
+  border-bottom: solid 5px var(--color-muymala);
+}
+.nav-muy:hover, .nav-muy.active {
+  background-color: var(--color-muymala);
+  color: white;
+}
+
+.nav-ext {
+  border-bottom: solid 5px var(--color-extmala);
+}
+.nav-ext:hover, .nav-ext.active {
+  background-color: var(--color-extmala);
+  color: white;
+}
+
+.tab-area {
+  min-width: 90%;
+  margin: auto;
+}
+.tab-pane {
+  padding: 25px;
+}
+
+.rec-desc {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+/***** FILTROS MAPA ******/
+select {
+  appearance: auto !important;
+  -moz-appearance: auto !important;
+}
+
+.form-control:focus {
+  box-shadow: none !important;
+  border-color: #ced4da;
+}
+
+.info-btn {
+  float: right;
+}
+
+.ind-select {
+  width: 33vw;
+  max-width: 50%;
+}
+
+.btn-aplicar {
+  background-color: steelblue;
+  border: none;
+  font-weight: 500;
+}
+/***** MODAL *****/
+.modal-body {
+  padding:20px 40px;
+}
+
+.mod-ind {
+font-weight: bold;
+}
+
+.mod-sub {
+  color:gray;
+  font-size: 1.5rem;
+  font-weight: 300;
+}
+
+.mod-desc {
+ margin-bottom: 25px;
+ color: var(--color-black);
+}
+
+button, button:focus {
+  border:none !important;
+  box-shadow: none !important;
+}
+
+
+/***** FILTROS REGISTRO HISTORICO ******/
+
+.btn-outline-light {
+  color:var(--color-black);
+}
+
+.rh-active {
+  background-color: var(--color-darkgreen);
+  border-radius: 5px;
+}
+
+.rh-active .btn-outline-light {
+  background-color: var(--color-darkgreen);
+  color:white;
+}
+
+
+@import 'bootstrap/dist/css/bootstrap.min.css';
