--- a/src/styles/calendario.css
+++ b/src/styles/calendario.css
@@ -1,6 +1,5 @@
 .calendar {
-    width: 50%;
-    margin: auto;
+    width: 75%;
     border: solid 1px gray;
     border-radius: 5px;
 }
@@ -14,7 +13,6 @@
     padding-top: 5px;
     margin: 0;
     box-sizing: border-box;
-    z-index: 1;
     text-align: center;
     border-radius: 5px;
 }
@@ -71,4 +69,40 @@
     box-sizing: border-box;
     z-index: 1;
     text-align: center;
+}
+
+/******* DETALLES ******/
+
+.detalles {
+    border: 1px solid rgba(0,0,0,0.25);
+    height: auto;
+    padding:20px;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+.accordion {
+    background-color: transparent;
+}
+
+.card {
+    border: none;
+    background-color: transparent;
+}
+
+.card-header {
+    padding:0;
+    background-color: transparent;
+    color: black;
+    text-decoration: none;
+    border-bottom: 2px solid lightgray;
+    
+}
+
+.card-body {
+    background-color: transparent;
+}
+
+.hora {
+    color: black !important; 
 }
