--- a/src/styles/calendario.css
+++ b/src/styles/calendario.css
@@ -74,11 +74,11 @@
 /******* DETALLES ******/
 
 .detalles {
-    border: 1px solid rgba(0,0,0,0.25);
     height: auto;
     padding:20px;
     border-radius: 5px;
     background-color: transparent;
+    border:1px solid gray;
 }
 
 .accordion {
@@ -88,15 +88,14 @@
 .card {
     border: none;
     background-color: transparent;
+    border-bottom: 1px solid lightgray;
 }
 
 .card-header {
     padding:0;
-    background-color: transparent;
+    background-color: white;
     color: black;
-    text-decoration: none;
-    border-bottom: 2px solid lightgray;
-    
+    text-decoration: none; 
 }
 
 .card-body {
