--- a/src/App.css
+++ b/src/App.css
@@ -303,4 +303,13 @@ footer {
   color: white;
 }
 
+/**** Heat Map Tooltip ****/
+.hmTooltip {
+  padding: 10px;
+}
+
+.hmTooltip p {
+  margin-bottom: 0px;
+}
+
 @import 'bootstrap/dist/css/bootstrap.min.css';
