--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,15 @@ button, button:focus {
   z-index: 0;
 }
 
+.loading {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  margin: 5px 20px;
+}
+
 /****** COMPARA FILTROS ****/
 .compara-filtros {
   background-color:rgba(70,130,180,0.5);
@@ -268,11 +277,10 @@ button, button:focus {
 
 .grafico {
   margin-top:15px;
-  width: 90%;
+  width: 100%;
   margin:auto;
   height: 100%;
   min-height: 300px;
-  background-color: rgba(0,0,0,0.05);
 }
 
 /****** CUADRITOS min, max, avg *****/
