revertir cambio de css

--- a/src/App.css
+++ b/src/App.css
@@ -329,4 +329,4 @@ footer {
   margin-bottom: 0px;
 }
 
-/* @import 'bootstrap/dist/css/bootstrap.min.css'; */
+@import 'bootstrap/dist/css/bootstrap.min.css';
