--- a/src/App.css
+++ b/src/App.css
@@ -282,8 +282,15 @@ button, button:focus {
   margin-top:15px;
   width: 100%;
   margin:auto;
+  display: flex;
+  justify-content: center;
   height: 100%;
-  min-height: 300px;
+  min-height: 450px;
+}
+
+.grafico-resize {
+  height: 100%;
+  width: 100%;
 }
 
 .grafico-compara {
