cambiar color de borde de sensor selccionado

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
   --color-darkgreen: #387347;
   --color-black: #1B1B1B;
 
-  --color-highlight: #F2E313;
+  --color-highlight: #387347;
 
   --marker-size: 36px;
   --marker-size-selected: 47px;
