--- a/src/styles/calendario.css
+++ b/src/styles/calendario.css
@@ -1,38 +1,72 @@
 .calendar {
-    width: 75%;
-    border: solid 1px gray;
-    border-radius: 5px;
+    width:75%;
 }
 
 .calendar .day {
+    color: rgb(255, 255, 255);
     position: relative;
     width: calc(100% / 7);
-    height: 44px;
+    height: 30px;
     display: inline-block;
     background-color: white;
-    padding-top: 5px;
-    margin: 0;
-    box-sizing: border-box;
+    padding: 4px;
     text-align: center;
-    border-radius: 5px;
+}
+
+.calendar .day span {
+    display: none;
+    position: absolute;
+    top: -5px;
+    left: 60px;
+    width: 125px;
+    padding: 5px;
+    z-index: 100;
+    background: #000;
+    color: #fff;
+}
+
+.calendar .day span:before{
+    content:'';
+    display:block;
+    width:0;
+    height:0;
+    position:absolute;
+    
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent; 
+    border-right:8px solid black;
+    left:-8px;
+    
+    top:7px;
+}
+
+.calendar :hover.day {
+    font-size: 99%; /* this is just for IE */
+}
+
+.calendar .day:hover.day span {
+    display: block;
 }
 
 .calendar .selected {
-    background-color: #F2811D;
-    color: white;
-    font-weight: bold;
+    filter: brightness(75%)
 }
 
 .calendar .today {
-    background-color: lightgray;
+    background-color: rgb(255, 255, 255);
 }
 
 .calendar .month {
-    color: gray;
+    display: none;
+    margin: 0;
+    padding: 0;
+    width: 0;
+    height: 0;
 }
 
 .calendar .after {
     color: lightgrey;
+    display: none;
 }
 
 .cal-header {
@@ -55,8 +89,9 @@
 }
 
 .day-names {
-    margin-bottom: 10px;
-    background-color: lightgrey;
+    margin-bottom: 6px;
+    background-color: rgb(241, 241, 241);
+
 }
 
 .weekday {
@@ -69,6 +104,7 @@
     box-sizing: border-box;
     z-index: 1;
     text-align: center;
+    border-radius: 5px;
 }
 
 /******* DETALLES ******/
@@ -76,19 +112,22 @@
 .detalles {
     height: auto;
     padding:20px;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: transparent;
     border:1px solid gray;
 }
 
 .accordion {
     background-color: transparent;
+    border-radius: 10px;
+
 }
 
 .card {
     border: none;
     background-color: transparent;
     border-bottom: 1px solid lightgray;
+    border-radius: 10px;
 }
 
 .card-header {
