--- a/src/App.css
+++ b/src/App.css
@@ -353,6 +353,17 @@ button, button:focus {
   border-radius: 10px;
 }
 
+.smallBotton{
+  background-color: steelblue;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 6px;
+  float: right;
+}
+
 .leyenda-grid {
   display: grid;
   grid-template-columns: 1fr 11fr;
