--- a/src/App.css
+++ b/src/App.css
@@ -102,8 +102,7 @@ nav a img {
   display: flex;
 }
 
-.tab-content > .tab-pane {
-  display: block; /* undo "display: none;" */
+.tab-content > .tab-pane { /* undo "display: none;" */
   visibility: hidden;
   margin-right: -100%;
   width: 100%;
