--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,12 @@
   color:var(--color-nodata);
 }
 .morado {
-  color:var(--color-extmala);
+  color:var(--color-darkgreen);
+  text-decoration: underline;
+}
+
+.morado:hover{
+  color: #85BF4B;
 }
 
 .bueno {
@@ -102,8 +107,7 @@ nav a img {
   display: flex;
 }
 
-.tab-content > .tab-pane {
-  display: block; /* undo "display: none;" */
+.tab-content > .tab-pane { /* undo "display: none;" */
   visibility: hidden;
   margin-right: -100%;
   width: 100%;
@@ -189,6 +193,18 @@ nav a img {
 }
 
 /***** FILTROS MAPA ******/
+
+.mapa-info {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 0 5px;
+}
+
+.mapa-info p {
+  width: 90%;
+  margin: 0 auto;
+}
+
 select {
   appearance: auto !important;
   -moz-appearance: auto !important;
@@ -197,6 +213,16 @@ select {
 .form-control:focus {
   box-shadow: none !important;
   border-color: #ced4da;
+}
+
+
+.filtros {
+  width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .info-btn {
@@ -212,7 +238,30 @@ select {
   background-color: steelblue;
   border: none;
   font-weight: 500;
+  max-width: 250px;
 }
+
+.filtro-material {
+  display: inline-block;
+}
+
+.btn-info {
+  width: 1.3rem;
+  height: 1.3rem;
+  border-radius: 50%;
+  display: inline-block;
+  padding: 0;
+  margin-left: 0.9rem;
+  margin-bottom: 6px;
+  border: 1px solid red;
+  background: none;
+  color: #1B1B1B;
+}
+
+.map-container {
+  width: 70%;
+}
+
 /***** MODAL *****/
 .modal-body {
   padding:20px 40px;
@@ -233,6 +282,20 @@ font-weight: bold;
  color: var(--color-black);
 }
 
+.modal-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-header .close{
+  margin-left: 60% !important;
+  position: absolute;
+  right: 1%;
+  top: 0.5%;
+}
+
+
 button, button:focus {
   border:none !important;
   box-shadow: none !important;
@@ -248,7 +311,7 @@ button, button:focus {
 .toggle-vista.btn-light.active {
   background-color: var(--color-darkgreen) !important;
   color:white !important;
-  border-radius: 5px;
+  border-radius: 0px;
   z-index: 0;
 }
 
@@ -268,6 +331,13 @@ button, button:focus {
   max-height: 500px;
   margin-top: 10%;
   margin-bottom: 10%;
+}
+
+.col-boton {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 /****** COMPARA FILTROS ****/
@@ -379,6 +449,18 @@ button, button:focus {
 footer {
   background-color: var(--color-darkgreen);
   color: white;
+
+}
+
+.footer-container {
+  width: 100%;
+
+}
+
+.footer-info {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 /**** Heat Map Tooltip ****/
@@ -388,6 +470,13 @@ footer {
 
 .hmTooltip p {
   margin-bottom: 0px;
+}
+
+
+@media (max-width: 768px) {
+  .map-container {
+    width: 80%;
+  }
 }
 
 @import 'bootstrap/dist/css/bootstrap.min.css';
