--- a/src/App.css
+++ b/src/App.css
@@ -259,6 +259,18 @@ select {
   width: 70%;
 }
 
+.leyenda-header {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 10px;
+}
+
+.ocultar-leyenda button{
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 99;
+}
+
 /***** MODAL *****/
 .modal-body {
   padding:20px 40px;
