--- a/src/App.css
+++ b/src/App.css
@@ -265,10 +265,19 @@ select {
   grid-template-columns: 1fr 10px;
 }
 
-.ocultar-leyenda button{
+.ocultar-leyenda {
+  position: absolute;
+  top: 3%;
+  right: 8%;
+}
+
+.ocultar-leyenda button {
   border-radius: 50%;
   cursor: pointer;
   z-index: 99;
+  height: 20px;
+  width: 20px;
+  line-height: 20px;
 }
 
 /***** MODAL *****/
@@ -433,14 +442,13 @@ button, button:focus {
 }
 
 .smallBotton{
-  background-color: steelblue;
-  border: none;
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  font-size: 16px;
-  border-radius: 6px;
-  float: right;
+  border-radius: 50%;
+  background-color: white;
+  height: 30px;
+  width: 30px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
 
 .leyenda-grid {
