--- a/src/App.css
+++ b/src/App.css
@@ -441,14 +441,17 @@ button, button:focus {
   border-radius: 10px;
 }
 
-.smallBotton{
+.info-button-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 50%;
-  background-color: white;
-  height: 30px;
-  width: 30px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
+  height: 50px;
+  width: 50px;
+}
+
+.info-button{
+  background: none;
 }
 
 .leyenda-grid {
