--- a/src/Pages/RegistroHistorico/components/Calendar/components/Calendar.css
+++ b/src/Pages/RegistroHistorico/components/Calendar/components/Calendar.css
@@ -1,177 +1,194 @@
-/* .calendar { */
-/*     width:75%; */
-/* } */
-/*  */
-/* .calendar .day { */
-/*     color: rgb(255, 255, 255); */
-/*     position: relative; */
-/*     width: calc(100% / 7); */
-/*     height: 30px; */
-/*     display: inline-block; */
-/*     background-color: white; */
-/*     padding: 4px; */
-/*     text-align: center; */
-/* } */
-/*  */
-/* .calendar .day span { */
-/*     display: none; */
-/*     position: absolute; */
-/*     top: -5px; */
-/*     left: 60px; */
-/*     width: 125px; */
-/*     padding: 5px; */
-/*     z-index: 100; */
-/*     background: #000; */
-/*     color: #fff; */
-/* } */
-/*  */
-/* .calendar .day span:before{ */
-/*     content:''; */
-/*     display:block; */
-/*     width:0; */
-/*     height:0; */
-/*     position:absolute; */
-/*      */
-/*     border-top: 8px solid transparent; */
-/*     border-bottom: 8px solid transparent;  */
-/*     border-right:8px solid black; */
-/*     left:-8px; */
-/*      */
-/*     top:7px; */
-/* } */
-/*  */
-/* .calendar :hover.day { */
-/*     font-size: 99%; [> this is just for IE <] */
-/* } */
-/*  */
-/* .calendar .day:hover.day span { */
-/*     display: block; */
-/* } */
-/*  */
-/* .calendar .selected { */
-/*     filter: brightness(75%) */
-/* } */
-/*  */
-/* .calendar .today { */
-/*     background-color: rgb(255, 255, 255); */
-/* } */
-/*  */
-/* .calendar .month { */
-/*     display: none; */
-/*     margin: 0; */
-/*     padding: 0; */
-/*     width: 0; */
-/*     height: 0; */
-/* } */
-/*  */
-/* .calendar .after { */
-/*     color: lightgrey; */
-/*     display: none; */
-/* } */
-/*  */
-/* .cal-header { */
-/*     background-color: lightskyblue; */
-/*     border-radius: 5px 5px 0 0; */
-/*     padding:5px 20px; */
-/* } */
-/*  */
-/* .current { */
-/*     text-align: center; */
-/*     font-weight: bold; */
-/* } */
-/* .next { */
-/*     text-align: end; */
-/*     cursor: pointer; */
-/* } */
-/*  */
-/* .previous { */
-/*     cursor: pointer; */
-/* } */
-/*  */
-/* .day-names { */
-/*     margin-bottom: 6px; */
-/*     background-color: rgb(241, 241, 241); */
-/*  */
-/* } */
-/*  */
-/* .weekday { */
-/*     font-weight: 500; */
-/*     position: relative; */
-/*     width: calc(100% / 7); */
-/*     display: inline-block; */
-/*     padding: 5px; */
-/*     margin: 0; */
-/*     box-sizing: border-box; */
-/*     z-index: 1; */
-/*     text-align: center; */
-/*     border-radius: 5px; */
-/* } */
-
 /******* DETALLES ******/
 
 .detalles {
-    height: auto;
-    padding:20px;
-    border-radius: 10px;
-    background-color: transparent;
-    border:1px solid gray;
+  height: auto;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: transparent;
+  border: 1px solid gray;
 }
 
 .accordion {
-    background-color: transparent;
-    border-radius: 10px;
-
+  background-color: transparent;
+  border-radius: 10px;
 }
 
 .card {
-    border: none;
-    background-color: transparent;
-    border-bottom: 1px solid lightgray;
-    border-radius: 10px;
+  border: none;
+  background-color: transparent;
+  border-bottom: 1px solid lightgray;
+  border-radius: 10px;
 }
 
 .card-header {
-    padding:0;
-    background-color: white;
-    color: black;
-    text-decoration: none; 
+  padding: 0;
+  background-color: white;
+  color: black;
+  text-decoration: none;
 }
 
 .card-body {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 .hora {
-    color: black !important; 
+  color: black !important;
 }
 
 .current-day {
-    font-weight: bold;
+  font-weight: bold;
 }
 
-.green-days {
-    background-color: gray;
+.react-calendar {
+  width: 350px;
+  max-width: 100%;
+  background: white;
+  border: 1px solid #a0a096;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.125em;
+}
+.react-calendar--doubleView {
+  width: 700px;
+}
+.react-calendar--doubleView .react-calendar__viewContainer {
+  display: flex;
+  margin: -0.5em;
+}
+.react-calendar--doubleView .react-calendar__viewContainer > * {
+  width: 50%;
+  margin: 0.5em;
+}
+.react-calendar,
+.react-calendar *,
+.react-calendar *:before,
+.react-calendar *:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.react-calendar button {
+  margin: 0;
+  border: 0;
+  outline: none;
+}
+
+.react-calendar button:enabled:hover {
+  cursor: pointer;
+}
+.react-calendar__navigation {
+  display: flex;
+  height: 44px;
+  margin-bottom: 1em;
+}
+.react-calendar__navigation button {
+  min-width: 44px;
+  background: none;
+}
+.react-calendar__navigation button:disabled {
+  background-color: #f0f0f0;
+}
+.react-calendar__navigation button:enabled:hover,
+.react-calendar__navigation button:enabled:focus {
+  background-color: #e6e6e6;
+}
+.react-calendar__month-view__weekdays {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 0.75em;
+}
+.react-calendar__month-view__weekdays__weekday {
+  padding: 0.5em;
+}
+.react-calendar__month-view__weekNumbers .react-calendar__tile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.75em;
+  font-weight: bold;
+}
+.react-calendar__month-view__days__day--weekend {
+  color: #d10000;
+}
+.react-calendar__month-view__days__day--neighboringMonth {
+  color: #757575;
+}
+.react-calendar__year-view .react-calendar__tile,
+.react-calendar__decade-view .react-calendar__tile,
+.react-calendar__century-view .react-calendar__tile {
+  padding: 2em 0.5em;
+}
+.react-calendar__tile {
+  max-width: 100%;
+  padding: 10px 6.6667px;
+  background: none;
+  text-align: center;
+  line-height: 16px;
+  border-bottom-right-radius: 40% 50%;
+  border-bottom-left-radius: 40% 50%;
+  border-top-right-radius: 40% 50%;
+  border-top-left-radius: 40% 50%;
+}
+.react-calendar__tile:disabled {
+  background-color: #f0f0f0;
+}
+.react-calendar__tile:enabled:hover,
+.react-calendar__tile:enabled:focus {
+  background-color: #e6e6e6;
+}
+.react-calendar__tile--now {
+  background: #ffff76;
+}
+.react-calendar__tile--now:enabled:hover,
+.react-calendar__tile--now:enabled:focus {
+  background: #ffffa9;
+}
+.react-calendar__tile--hasActive {
+  background: #76baff;
+}
+.react-calendar__tile--hasActive:enabled:hover,
+.react-calendar__tile--hasActive:enabled:focus {
+  background: #a9d4ff;
+}
+.react-calendar__tile--active {
+  background: #006edc;
+  color: white;
+}
+.react-calendar__tile--active:enabled:hover,
+.react-calendar__tile--active:enabled:focus {
+  background: #1087ff;
+}
+.react-calendar--selectRange .react-calendar__tile--hover {
+  background-color: #e6e6e6;
 }
 
 .no-data {
-    background-color: rgb(240, 239, 239);
+  color: black !important;
+  background-color: rgb(240, 239, 239);
 }
 
 .good {
-    background-color: rgb(76, 187, 23);
+  background-color: rgb(76, 187, 23);
 }
 
 .acceptable {
-    background-color: rgb(253, 218, 13);
+  background-color: rgb(253, 218, 13);
 }
 
 .bad {
-    background-color: rgb(254,90,29);
+  background-color: rgb(254, 90, 29);
 }
- 
+
 .super-bad {
-    background-color: rgb(238, 75, 43);
+  background-color: rgb(238, 75, 43);
 }
+
 .extremly-bad {
-    background-color: rgb(143, 63, 151);
+  background-color: rgb(143, 63, 151);
+}
+
+.out-of-range {
+  /* background-color: lightgray; */
+  color: rgba(0, 0, 0, 0.2);
 }
