--- a/src/Pages/RegistroHistorico/components/CalendarSection/components/Calendar.css
+++ b/src/Pages/RegistroHistorico/components/CalendarSection/components/Calendar.css
@@ -1,11 +1,5 @@
-/******* DETALLES ******/
-
-.detalles {
-  height: auto;
-  padding: 20px;
-  border-radius: 10px;
-  background-color: transparent;
-  border: 1px solid gray;
+.hour-cards {
+  height: 800px;
 }
 
 .accordion {
