--- a/src/styles/MapLegend.css
+++ b/src/styles/MapLegend.css
@@ -1,14 +1,5 @@
-/* legend Mapa */
 .legend-width {
-  width: 15rem;
-  background-color: white;
-  padding: 1rem;
-  margin-right: 1rem;
-  font-size: 0.9rem;
-  border-radius: 10px;
-  justify-content: center;
-  align-items: center;
-  /* box-sizing: content-box; */
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .legend-header {
