fix: fix class names for markers to correctly display them

--- a/src/styles/marker.css
+++ b/src/styles/marker.css
@@ -87,7 +87,7 @@
     color: var(--color-mala-d);
 }
 
-.marker-super-bad {
+.marker-very-bad {
     background-color: var(--color-muymala);
     color: var(--color-muymala-d);
 }
