--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,9 +1,3 @@
 .my-navbar {
-  background-color: #387347 !important;
-}
-
-.cei-name{
-  font-size: 0.5rem;
-  font-weight: bold;
-  color: white;
+  background-color: var(--bg-asparagus) !important;
 }
